# books-hub

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
books/: admin.py  models.py  urls.py
books/migrations/: 0002_auto_20211006_1749.py
books/templates/: base.html  create_form.html
books/templates/books/: genres_list.html
books/templates/users/: create.html  login.html
books/tests/: test_forms.py  test_views.py
bookshub/: manage.py  settings.py  urls.py
bookshub/books/: forms.py  models.py  tests.py  urls.py  views.py
bookshub/books/migrations/: 0001_initial.py
bookshub/books/static/books/css/: styles.css
bookshub/books/templates/: base.html
bookshub/books/templates/books/: book_details.html  books_list.html  genre_details.html  genre_form.html  genres_list.html
bookshub/books/tests/: test_models.py
bookshub/bookshub/: asgi.py  settings.py  urls.py  wsgi.py
users/: forms.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
