[tool.poetry]
name = "books-hub"
version = "0.1.0"
description = "An application for organizing, rating and dicussing books."
authors = ["Jefferson Oliveira <jefferson.dev.insights@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
